# kasumi-v0

./: Cargo.toml  generator.py  new_registry.json  registry.json  registry_generator.py
kasumi-network/: Cargo.toml  README.md
kasumi-network/src/: connection.rs  lib.rs
kasumi-protocol/: Cargo.toml  README.md
kasumi-protocol/src/: lib.rs  state.rs  types.rs  varint.rs
kasumi-protocol/src/packets/: macros.rs  mod.rs
kasumi-protocol/src/packets/handshake/: handshake.rs  mod.rs
src/: connection.rs  main.rs  network.rs  registry.rs  varint.rs  world.rs
src/protocol/: identifier.rs  macros.rs  mod.rs  registry.rs  server_list_ping.rs  text.rs
src/protocol/handlers/: configuration.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
src/protocol/packets/: configuration.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
