[package]
name = "kasumi"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = "1.17.0"
valence_nbt = { version = "0.8.0", features = ["binary", "serde"] }
pumpkin-nbt = { git = "https://github.com/Pumpkin-MC/Pumpkin.git" }
indexmap = { version = "2.9.0", features = ["serde"] }
